Apply flex styling to sections

--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,116 @@
 /* Add CSS styling here */
+@import url('https://fonts.googleapis.com/css2?family=Belgrano&family=Bellota:wght@400;700&display=swap');
+/* Copy/Paste for Fonts */
+/* font-family: 'Belgrano', serif;
+font-family: 'Bellota', cursive; */
+
+/* RESET */
+html, body, div, span, applet, object, iframe,  
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
+a, abbr, acronym, address, big, cite, code,  
+del, dfn, em, img, ins, kbd, q, s, samp,  
+small, strike, strong, sub, sup, tt, var,  
+b, u, i, center,  
+dl, dt, dd, ol, ul, li,  
+fieldset, form, label, legend,  
+table, caption, tbody, tfoot, thead, tr, th, td,  
+article, aside, canvas, details, embed,  
+figure, figcaption, footer, header, hgroup,  
+menu, nav, output, ruby, section, summary,  
+time, mark, audio, video {  
+    margin: 0;  
+    padding: 0;  
+    /* border: 0;   */
+    font-size: 100%;  
+    font: inherit;  
+    vertical-align: baseline;  
+}
+
+*{
+    box-sizing:border-box;
+    border:1px solid grey;
+    max-width:100%;
+}
+
+/*General Styles*/
+html {
+    font-size: 62.5%;
+}
+body {
+    font-size: 1.4rem;;
+    line-height: 1.5;
+    font-family: 'Bellota', cursive;
+    margin: 10px;
+}
+h1 {
+    font-family: 'Belgrano', serif;
+    font-size: 6rem;
+}
+h2 {
+    font-size: 4rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+a {
+    text-decoration: none;
+}
+section {
+    padding: 4% 0;
+}
+.boldText {
+    font-weight: bold;
+}
+
+/* HEADER STYLES */
+.subtitle {
+    font-size: 4rem;
+}
+
+
+/* ABOUT ME STYLES */
+#aboutMe {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-content: flex-end;
+}
+
+#aboutMe div {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 45%;
+    justify-content: flex-end;
+}
+
+#aboutMe img {
+    display: inline;
+    width: 50%;
+    height: auto;
+}
+
+
+/* GALLERY STYLES */
+
+#gallery {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+#gallery div {
+    width:23%;
+    margin:4% 0;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+#gallery div img {
+
+}
+
+#gallery p {
+    text-align: center;
+}
+/* FOOTER STYLES */
