--- a/style/index.css
+++ b/style/index.css
@@ -20,7 +20,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
     margin: 0;  
     padding: 0;  
-    /* border: 0;   */
+    border: 0;  
     font-size: 100%;  
     font: inherit;  
     vertical-align: baseline;  
@@ -28,7 +28,7 @@ time, mark, audio, video {
 
 *{
     box-sizing:border-box;
-    border:1px solid grey;
+    /* border:1px solid grey; */
     max-width:100%;
 }
 
@@ -75,7 +75,7 @@ section {
 }
 header {
     background-color: #3d405b;
-    height: 150px;
+    height: 180px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-evenly;
@@ -101,7 +101,7 @@ header a {
 #aboutMe div {
     display: flex;
     flex-flow: column nowrap;
-    width: 45%;
+    width: 47%;
     justify-content: flex-end;
 }
 
@@ -112,7 +112,7 @@ header a {
 
 #aboutMe img {
     display: inline;
-    width: 50%;
+    width: 48.5%;
     height: auto;
 }
 
@@ -135,9 +135,7 @@ header a {
     flex-direction:column;
     align-items:center;
 }
-#gallery div img {
-/* empty */
-}
+
 #gallery p {
     text-align: center;
 }
@@ -145,7 +143,7 @@ header a {
 /* FOOTER STYLES */
 footer {
     color: #f4f1de;
-    height: 150px;
+    height: 200px;
     background-color: #3d405b;
     display: flex;
     flex-flow: column wrap;
@@ -159,6 +157,12 @@ footer a {
 
 footer h2 {
     text-align: center;
-    padding: 2% 0;
+    padding: 1% 0;
+}
+
+footer #supportButton {
+    background-color: #3d405b;
+    text-align: center;
+    padding-top: 5%;
 }
 
