--- a/style/index.css
+++ b/style/index.css
@@ -20,7 +20,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
     margin: 0;  
     padding: 0;  
-    border: 0;  
+    /* border: 0;   */
     font-size: 100%;  
     font: inherit;  
     vertical-align: baseline;  
@@ -28,7 +28,7 @@ time, mark, audio, video {
 
 *{
     box-sizing:border-box;
-    /* border:1px solid grey; */
+    border:1px solid grey;
     max-width:100%;
 }
 
@@ -77,7 +77,7 @@ header {
     background-color: #3d405b;
     height: 180px;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: column wrap;
     justify-content: space-evenly;
     padding: 0 3%;
 }
@@ -143,14 +143,14 @@ header a {
 /* FOOTER STYLES */
 footer {
     color: #f4f1de;
-    height: 200px;
+    height: 20vh; /* was 200px */
     background-color: #3d405b;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
 }
 
 footer a {
-    width: 30%;
+    width: 35%;
     text-align: center;
     margin: 0 auto;
 }
@@ -163,6 +163,134 @@ footer h2 {
 footer #supportButton {
     background-color: #3d405b;
     text-align: center;
-    padding-top: 5%;
+    padding-top: 4%;
+}
+
+/* TABLET STYLES @ 800PX */
+@media (max-width: 800px) {
+    /* Header */
+    header {
+        height: 30vh;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        padding: 0 3%;
+        align-items: center;
+    }
+    header nav {
+        display: flex;
+        flex-flow: row wrap;
+        width: 100%;
+        justify-content: center;
+    }
+    header a {
+        margin: 0 1%;
+    }
+    /* About */
+    #aboutMe {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2% 3%;
+    }
+    
+    #aboutMe div {
+        width: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-end;
+        text-align: center;
+    }
+    
+    #aboutMe a {
+        margin: 2% auto;
+    }
+    
+    #aboutMe img {
+        width: 90%;
+    }
+    
+    /* Gallery */
+    #gallery {
+        padding: 3% 3%;
+    }
+    #gallery div {
+        width: 48%;
+    }
+    /* Footer */
+    footer h2 {
+        font-size: 2.5rem;
+    }
+    footer #supportButton {
+        padding: 1% 0;
+    }
+}
+
+
+
+
+/* PHONE STYLES @ 500PX */
+
+@media (max-width: 500px) {
+    /* Header */
+    header {
+        height: 40vh;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        padding: 0 3%;
+        align-items: center;
+    }
+    header nav {
+        display: flex;
+        flex-flow: column nowrap;
+        width: 30%;
+    }
+    header a {
+        margin: 0;
+    }
+    .subtitle {
+        display: none;
+    }
+    /* About */
+    #aboutMe {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2% 3%;
+    }
+    
+    #aboutMe div {
+        width: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-end;
+        text-align: center;
+    }
+    
+    #aboutMe a {
+        margin: 2% auto;
+    }
+    
+    #aboutMe img {
+        width: 90%;
+    }
+    
+    /* Gallery */
+    #gallery {
+        padding: 3% 3%;
+    }
+    #gallery div {
+        width: 48%;
+    }
+    /* Footer */
+    footer h2 {
+        font-size: 2.5rem;
+    }
+    footer #supportButton {
+        padding: 1% 0;
+    }
 }
 
