--- a/style/index.css
+++ b/style/index.css
@@ -20,7 +20,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
     margin: 0;  
     padding: 0;  
-    /* border: 0;   */
+    border: 0;  
     font-size: 100%;  
     font: inherit;  
     vertical-align: baseline;  
@@ -28,7 +28,7 @@ time, mark, audio, video {
 
 *{
     box-sizing:border-box;
-    border:1px solid grey;
+    /* border:1px solid grey; */
     max-width:100%;
 }
 
